2008-01-03 Hans Boehm <Hans.Boehm@hp.com>
	(Merge from separate atomic_ops tree)
	* src/atomic_ops/sysdeps/gcc/x86.h: Define correct macro for
	double-width cas, and fix its implementation.
	* doc/README.txt: Clarify use of _full.  Add more warnings about
	data dependencies.

2008-01-02 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/gcc/powerpc.h (AO_load_acquire): Add
	%X1 modifier to support indexed addressing.

2007-07-23 Hans Boehm <Hans.Boehm@hp.com> (really Jim Marshall)
	* src/atomic_ops/sysdeps/msftc/x86.h (_InterlockedExchangeAdd): Define
	for VC++6.

2007-07-05  Andreas Tobler  <a.tobler@schweiz.org>
	* src/atomic_ops.h: Check for __powerpc64__ and __ppc64__ to include
	powerpc.h.

2007-06-26 Hans Boehm <Hans.Boehm@hp.com> (really Luca Barbato)
        * src/atomic_ops/sysdeps/gcc/powerpc.h (AO_load_acquire): Add
	64-bit version.

2007-06-13 Hans Boehm <Hans.Boehm@hp.com>
        * src/atomic_ops.h: include stddef.h

2007-06-06 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/msftc/x86_64.h: New file.
	* src/atomic_ops.h: Add test for msftc/x86_64.h.
	* src/atomic_ops/sysdeps/msftc/x86.h: Complain for _WIN64.
	* src/atomic_ops/sysdeps/Makefile.am: Add x86_64.h.
	* src/atomic_ops/sysdeps/Makefile.in: Regenerate.
	* src/atomic_ops/sysdeps/aligned_atomic_load_store.h,
	  src/atomic_ops/sysdeps/int_aligned_atomic_load_store.h,
	  src/atomic_ops/sysdeps/short_aligned_atomic_load_store.h:
	  Replace unsigned long cast with size_t.

2007-05-17 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/gcc/hppa.h (AO_test_and_set_full):
	Add cast for return.

2007-05-14 Hans Boehm <Hans.Boehm@hp.com>
	doc/README.txt: Update to reflect C++0x effort.

2007-05-07  Hans Boehm <Hans.Boehm@hp.com> (with help from Philipp Zambelli)
	* src/atomic_ops/sysdeps/msftc/x86.h: Don't just assume that mfence
	is present.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set_full): Correct
	oldval type.

2006-11-09 Earl Chew (Agilent)